Fix: OSD sometimes misplaces the font and the font's "shadow"

Make sure that shadow and actual text are exactly painted in the same
way.

BUG: 257643
FIXED-IN: 2.8